<resources>
    <string name="app_name">My Posts</string>
    <string name="post_details_titles">Post Details</string>
    <string name="network_error">No Internet connection!</string>
    <string name="timeout_error">Connection timed out!</string>
    <string name="unknown_error">Something went wrong please try again later!</string>
    <string name="posts_list_create_new_post">Create a new post</string>
    <string name="new_post_enter_desc">Enter Description</string>
    <string name="new_post_title">Title</string>
    <string name="new_post_create">Create</string>
    <string name="details_title">Title</string>
    <string name="details_desc">Description</string>
    <string name="details_read_more">Read More</string>
    <string name="details_read_less">Read Less</string>

    <string name="edit_post_create">Edit</string>
</resources>